--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "mcamara/laravel-localization": "^1.8",
+        "stripe/stripe-php": "^10.15",
         "tymon/jwt-auth": "^1.0",
         "yoeunes/toastr": "^1.2"
     },
